@@ -32,6 +32,8 @@ Extension Modules
 Library
 -------
 
+- The imgfile module from IRIX has been deprecated for removal in Python 3.0.
+
 - The GLWS module from IRIX has been deprecated for removal in Python 3.0.
 
 - The GET module from IRIX has been deprecated for removal in Python 3.0.
